--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kenkataiwa/oauth",
-    "type": "library",
+    "type": "package",
     "description": "Open Authentiation Abstration",
     "keywords": ["oauth", "php-oauth", "social integration"],
     "homepage": "http://www.github.com/kenkataiwa/oauth",
@@ -9,15 +9,32 @@
         {"name": "Kenneth Kataiwa", "email": "kenkataiwa@gmail.com"}
     ],
     "require": {
-        "php": ">=5.4",
-        "facebook/php-sdk": "3.2.2"
+        "php": ">= 5.4",
+        "facebook/php-sdk": "3.2.2",
+        "google/google-api-php-client": "0.6.0",
     },
     "autoload": {
-        "psr-0": { "OAuth": "lib/" }
+        "psr-0": {"OAuth": "lib/"}
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "google/google-api-php-client",
+                "version": "0.6.0",
+                "dist": {
+                    "url": "http://google-api-php-client.googlecode.com/files/google-api-php-client-0.6.0.tar.gz",
+                    "type": "tar"
+                },
+                "autoload": {
+                    "classmap": ["src/"]
+                }
+            }
+        }
+    ]
 }
