--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">= 5.4",
         "facebook/php-sdk": "3.2.2",
-        "google/google-api-php-client": "0.6.0",
+        "google/google-api-php-client": "0.6.0"
     },
     "autoload": {
         "psr-0": {"OAuth": "lib/"}
