--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,14 @@
         "php": ">= 5.4",
         "facebook/php-sdk": "3.2.2"
     },
+    "require-dev": {
+        "opauth/opauth": "dev-master",
+        "opauth/facebook": "dev-master",
+        "opauth/twitter": "dev-master",
+        "opauth/google": "dev-master",
+        "opauth/linkedin": "dev-master",
+        "hybridauth/hybridauth": "dev-master"
+    },
     "autoload": {
         "psr-0": {"OAuth": "lib/"}
     },
