--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "kenkataiwa/oauth",
+    "name": "kenkataiwa/gatekeeper",
     "type": "package",
     "description": "Open Authentiation Abstration",
-    "keywords": ["oauth", "php-oauth", "social integration"],
-    "homepage": "http://www.github.com/kenkataiwa/oauth",
+    "keywords": ["gatekeeper","oauth", "php-oauth", "social integration"],
+    "homepage": "http://www.github.com/kenkataiwa/gatekeeper",
     "license": "MIT",
     "authors": [
         {"name": "Kenneth Kataiwa", "email": "kenkataiwa@gmail.com"}
@@ -23,7 +23,7 @@
         "opauth/twitter": "dev-master"
     },
     "autoload": {
-        "psr-0": {"OAuth": "lib/"}
+        "psr-0": {"Gatekeeper": "lib/"}
     },
     "suggest": {
         "google/google-api-php-client": "Add a custom repository to http://google-api-php-client.googlecode.com/files/google-api-php-client-0.6.0.tar.gz "
