--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: php
 php:
-  - 5.4
   - 5.3
+  - 5.4
 
-before_script: 
+matrix:
+  allow_failures:
+    - php: 5.4
+
+before_script:
     - composer install --dev --prefer-source
