--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,5 @@ php:
   - 5.3
   - 5.4
 
-matrix:
-  allow_failures:
-    - php: 5.4
-
 before_script:
-    - composer install --dev --prefer-source
+    - composer install
