Improving config template

--- a/tools/sandbox/config/services.config.php.dist
+++ b/tools/sandbox/config/services.config.php.dist
@@ -24,5 +24,8 @@ return array(
             "enabled" => true,
             "keys" => array("key" => "", "secret" => "")
         ),
+        // if you want to enable logging, set 'debug_mode' to true  then provide a writable file by the web server on "debug_file"
+        "debug_mode" => false,
+        "debug_file" => "",
     )
 );
