--- a/tools/sandbox/config/services.config.php.dist
+++ b/tools/sandbox/config/services.config.php.dist
@@ -8,19 +8,23 @@
 return array(
     "base_url" => "",
     "services" => array(
-        "Google" => array(
-            "enabled" => true,
-            "keys" => array("id" => "", "secret" => "")
-        ),
         "Facebook" => array(
             "enabled" => true,
             "keys" => array("id" => "", "secret" => "")
         ),
-        "Twitter" => array(
+        "Google" => array(
+            "enabled" => true,
+            "keys" => array("id" => "", "secret" => "")
+        ),
+        "LinkedIn" => array(
             "enabled" => true,
             "keys" => array("key" => "", "secret" => "")
         ),
-        "LinkedIn" => array(
+        "Live" => array(
+            "enabled" => true,
+            "keys" => array("id" => "", "secret" => "")
+        ),
+        "Twitter" => array(
             "enabled" => true,
             "keys" => array("key" => "", "secret" => "")
         ),
